Added credit card project

--- a/index.html
+++ b/index.html
@@ -461,12 +461,14 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
+              <a href="https://github.com/sairatnamukta/sairatnamukta.github.io/blob/main/cc_db.png" class="block-20 zoom-effect" target="_blank" style="background-image: url('images/cc_db.png');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg">Power BI Sales dashboard Project for Beginners</a></h3>
-                <p>Designed a power bi dashboard for Madhav Store to track and analyze the online sales data acorss India.</p>
+                <h3 class="heading"><a href="https://github.com/sairatnamukta/sairatnamukta.github.io/blob/main/cc_db.png" target="_blank" >Power BI Credit Card Financial Analysis dashboard</a></h3>
+                <p>Developed a comprehensive credit card weekly dashboard that provides real-time insights into key performance metrics and trends, 
+					enabling stakeholders to monitor and analyze credit card operations effectively.
+				</p>
               </div>
             </div>
           </div>
